# python-cmake-buildsystem

./: .circleci-matrix.yml  .git-blame-ignore-revs  .gitignore  .travis.yml  CMakeLists.txt  CROSS-COMPILING.rst  CTestConfig.cmake  README  README.md  README.rst  appveyor.yml  appveyor_dashboard.cmake  circle.yml  circle_dashboard.cmake  circle_macos_dashboard.cmake  circle_win_dashboard.cmake  clean.sh  dll.sh  genvs.sh  github_actions_dashboard.cmake  python-2.7.10.patch  python_common.cmake  readme.txt  run_py_ver.py  runit.sh  setup_py_env.py  travis_dashboard.cmake
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: CI.yml  adb-emu.sh  android.yml
Doc/: conf.py  make.py
Doc/cmake/: cmake-modules.rst  index.rst
Doc/cmake/cmake-modules/: CMakeChecks.rst
Doc/cmake/modules/: CMakeChecks.rst  CheckCMakeCommandExists.rst  PythonApplyPatches.rst
Doc/tools/extensions/: cmakelib.py
Utilities/: check_python_patches.py
cmake/: Assembler.cmake  CMakeChecks.cmake  CMakeExpandImportedTargets.cmake  CheckCMakeCommandExists.cmake  CheckCMakePropertyExists.cmake  ConfigureChecks.cmake  DownloadSources.cmake  Extensions.cmake  FindPatch.cmake  ParseVersionString.cmake  PlatformTest.cmake  PythonApplyPatches.cmake  PythonAutoDetectOSX.cmake  PythonConfig.cmake.in  PythonExtractVersionInfo.cmake  SetPythonVersionFrom.cmake  UnitTests.cmake  UpdateSysconfig.cmake  add_python_extension_CMakeLists.txt.in  circle.yml  config.c  config.c.in  config_2.c.in  config_3.c.in  ffi.h  fficonfig.h  fficonfig.h.in  makefile-variables.in  platform.c  pyconfig.h  python.pc.in
cmake/PC/bdist_wininst/: CMakeLists.txt
cmake/PC/launcher/: CMakeLists.txt
cmake/config-mingw/: pyconfig.h
cmake/config-unix/: pyconfig.h.in
cmake/extensions/: CMakeLists.txt
cmake/include/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt  frozenmodules.c  generate_libpythonstub_def.cmake
cmake/patches/: 01-readline-libedit.patch
cmake/patches-win32/: 01-dynload_win.patch  02-signalmodule.patch  03-mingw32.patch  04-uninitialised-flags.patch  05-libffi-latest.patch  06-build_numpy.patch  06-msvc9compiler-vs10-support-issue16296.patch  07-msvc9compiler-vcexpress-and-sdk-support-issue7511.patch
cmake/pgen/: CMakeLists.txt
cmake/python/: CMakeLists.txt  InstallScript.cmake.in
cmake/tools/: CMakeLists.txt
patches/: Python-2.7.10.patch  README.rst
patches/2.7/: 0001-fix-pyerror-msvc.patch
patches/2.7.13/Windows-GNU/: 0001-MinGW-support-Add-patches-win32-01-dynload_win.patch.patch  0002-MinGW-support-Add-patches-win32-02-signalmodule.patc.patch  0003-MinGW-support-Add-patches-win32-03-mingw32.patch.patch  0004-MinGW-support-Add-patches-win32-05-libffi-latest.pat.patch
patches/2.7.13/Windows-MSVC/1900/: 0002-VS2015-Support-Backport-Issue-22919-Windows-build-up.patch  0003-VS2015-Support-Backport-of-Issue-23524-Replace-_PyVe.patch
patches/2.7.15/Windows-GNU/: 0001-MinGW-support-Add-patches-win32-01-dynload_win.patch.patch  0002-MinGW-support-Add-patches-win32-02-signalmodule.patc.patch  0003-MinGW-support-Add-patches-win32-03-mingw32.patch.patch  0004-MinGW-support-Add-patches-win32-05-libffi-latest.pat.patch
patches/2.7.15/Windows-MSVC/: README.rst
patches/2.7.15/Windows-MSVC/1900/: 0002-VS2015-Support-Backport-Issue-22919-Windows-build-up.patch  0003-VS2015-Support-Backport-of-Issue-23524-Replace-_PyVe.patch
patches/2.7.3/: 0001-Backport-Issue-20374-Fix-build-with-GNU-readline-6.3.patch  README.rst
patches/2.7.3/Windows-GNU/: 0001-MinGW-support-Add-patches-win32-01-dynload_win.patch.patch  0002-MinGW-support-Add-patches-win32-02-signalmodule.patc.patch  0003-MinGW-support-Add-patches-win32-03-mingw32.patch.patch  0004-MinGW-support-Add-patches-win32-05-libffi-latest.pat.patch
patches/2.7.4/: 0002-Backport-new-plan-just-remove-typecasts-closes-20374.patch  0003-Backport-Issue-20374-Avoid-compiler-warnings-when-co.patch  README.rst
patches/2.7.5/: 0002-Backport-new-plan-just-remove-typecasts-closes-20374.patch
patches/2.7.5/Windows-GNU/: 0001-MinGW-support-Add-patches-win32-01-dynload_win.patch.patch  0002-MinGW-support-Add-patches-win32-02-signalmodule.patc.patch  0003-MinGW-support-Add-patches-win32-03-mingw32.patch.patch  0004-MinGW-support-Add-patches-win32-05-libffi-latest.pat.patch
patches/2.7.6/: 0001-Backport-Issue-20374-Fix-build-with-GNU-readline-6.3.patch  0003-Backport-Issue-20374-Avoid-compiler-warnings-when-co.patch
patches/3/: 0001-Prevent-incorrect-include-of-io.h-and-memory.h-found.patch  0002-Prevent-duplicated-OverlappedType-symbols-with-built.patch  0003-mpdecimal-Export-inlined-functions-to-support-extens.patch
patches/3.10/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec-.patch  0002-Prevent-duplicated-OverlappedType-symbols-with-built.patch  0003-mpdecimal-Export-inlined-functions-to-support-extens.patch
patches/3.11/: 0001-_bootstrap_python-Fix-execution-on-windows-disabling.patch  0002-Prevent-duplicated-OverlappedType-symbols-with-built.patch  0002-getpath-Update-build-directory-assumptions-based-on-.patch  README.rst
patches/3.12/: 0001-_bootstrap_python-Fix-execution-on-windows-disabling.patch  0002-getpath-Update-build-directory-assumptions-based-on-.patch  README.rst
patches/3.5/: README.rst
patches/3.6/: 0004-Fix-Windows-build-of-Python-for-latest-WinSDK.patch  0005-comment-out-Py_DEBUG_in_pyconfig_h.patch  README.rst
patches/3.6.15/: 0001-bpo-35519-Rename-test.bisect-to-test.bisect_cmd-GH-1.patch  README.rst
patches/3.7/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec-.patch  README.rst
patches/3.8/: 0003-mpdecimal-Export-inlined-functions-to-support-extens.patch  0005-comment-out-Py_DEBUG-so-windows-c-extensions-can-wor.patch
patches/3.9/: 0001-Prevent-incorrect-include-of-io.h-found-in-libmpdec-.patch  0001-Prevent-missing-include-of-io.h-found-in-msi-.patch  0002-Prevent-duplicated-OverlappedType-symbols-with-built.patch  01-readline-libedit.patch  README.rst
post-install/: CMakeLists.txt
